Revise menu section with updated items and headings
Updated menu section to reflect changes in items and categories.

--- a/index.html
+++ b/index.html
@@ -1,26 +1,65 @@
-<section id="menu" class="section">
-    <h2>Notre menu 🍽️</h2>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Les délices de Mary</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-    <div class="menu-block">
-        <h3>🧂 Salés</h3>
-        <ul>
-            <li>Mini pizzas</li>
-            <li>Bricks (tous goûts)</li>
-            <li>Feuilletés variés</li>
-            <li>Mini hamburgers</li>
-            <li>Mini tacos</li>
-            <li>Et bien plus encore…</li>
-        </ul>
-    </div>
+<header>
+    <h1>Les délices de Mary</h1>
+    <p>Du fait maison, préparé avec amour 💕</p>
+</header>
 
-    <div class="menu-block">
-        <h3>🍰 Sucrés</h3>
-        <ul>
-            <li>Gâteaux traditionnels</li>
-            <li>Pâtisseries modernes</li>
-            <li>Cookies maison</li>
-            <li>Choux & mignardises</li>
-            <li>Desserts personnalisés</li>
-        </ul>
-    </div>
+<nav>
+    <a href="#accueil">Accueil</a>
+    <a href="#menu">Menu</a>
+    <a href="#commande">Commander</a>
+    <a href="#contact">Contact</a>
+</nav>
+
+<section id="accueil" class="section">
+    <h2>Bienvenue 🍰</h2>
+    <p>
+        Chez <strong>Les délices de Mary</strong>, nous préparons des salés et des sucrés
+        faits maison, parfaits pour vos événements, fêtes ou simplement pour se faire plaisir.
+    </p>
 </section>
+
+<section id="menu" class="section">
+    <h2>Notre menu 🧁</h2>
+
+    <h3>Salés</h3>
+    <ul>
+        <li>Mini pizzas</li>
+        <li>Feuilletés</li>
+        <li>Bricks</li>
+    </ul>
+
+    <h3>Sucrés</h3>
+    <ul>
+        <li>Gâteaux maison</li>
+        <li>Cookies</li>
+        <li>Choux</li>
+    </ul>
+</section>
+
+<section id="commande" class="section">
+    <h2>Commander 📦</h2>
+    <p>Pour passer commande, contactez-nous directement :</p>
+    <a class="btn" href="https://wa.me/212000000000">Commander sur WhatsApp</a>
+</section>
+
+<section id="contact" class="section">
+    <h2>Contact 📞</h2>
+    <p>📍 Ville : à compléter</p>
+    <p>📱 Téléphone : à compléter</p>
+</section>
+
+<footer>
+    <p>© 2026 Les délices de Mary – Fait avec amour 💖</p>
+</footer>
+
+</body>
+</html>
